2007-08-17  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/dependency_list.rb: For diamond dependencies with
	different versions on the bottom of the diamond, trim all but the
	latest dependency.  This will prevent gems like hoe from being
	installed multiple times.

2007-08-15  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/installer.rb: Support building mkrf extensions.  Fixes
	bug #11313.  Patch by Jeremy Hinegardner.
	* lib/rubygems/installer.rb: Ensure bin files are executable.  Fixes
	bug #8985 submitted by Ara Howard.
	* lib/rubygems/installer.rb: Insert installing gem home dir into bin
	wrapper.  Patch #8818 by Ara Howard.

2007-08-13  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/uninstall_command.rb: Gems with version of 0
	can now be uninstalled.

2007-08-11  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/config_file.rb: Command-line args override ~/.gemrc
	now.  Gem.sources is pulled from ~/.gemrc now.  Gem::ConfigFile can
	write itself out now.
	* lib/rubygems/commands/sources_command.rb: Now writes out
	Gem.configuration on changes.  No longer checks source cache on
	--list.

2007-08-09  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/source_info_cache.rb: Make Gem::SourceInfoCache#search
	only search gems in Gem.sources.
	* lib/rubygems.rb: Make Gem::configuration a real Gem::ConfigFile
	object.
	* lib/rubygems/commands/query_command.rb: Fix `gem query --details`.
	Add `gem query --no-versions`.
	* lib/rubygems/local_remote_options.rb: Make `gem mumble --source URL`
	only use that source.
	* lib/rubygems/config_file.rb: Fix Gem::ConfigFile#[]= to match
	Gem::ConfigFile#[].

2007-08-08  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/specification_command.rb: Match only exact gem
	names.  Fixes bug #9681.  Patch by Michael DeCandia.
	* lib/rubygems/commands/unpack_command.rb: Match only exact gem names.
	Fixes bug #9681.  Patch by Michael DeCandia.